<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:onClick="send"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/presetTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Text" />

    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="40dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_send"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_send"
        android:focusable="false"
        android:clickable="false" />

    <ImageButton
        android:id="@+id/pinButton"
        android:layout_width="40dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_pin"
        android:onClick="pin"/>

    <ImageButton
        android:id="@+id/removeButton"
        android:layout_width="40dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pinButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_remove"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_edit"
        android:onClick="remove"/>

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="40dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/removeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_edit"
        android:onClick="edit"/>

</androidx.constraintlayout.widget.ConstraintLayout>